Tue Mar 23 12:02:00 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(generateStars): Add in support for use_star_image
	which was lost when template support was put in way back when.

Tue Mar 23 11:47:52 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* Makefile.in: add missing ';' in for loops, between fi & done

Mon Mar 22 19:26:56 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/DocumentRef.cc(AddDescription): Check to see that
	description isn't a null string or contains only whitespace before
	doing anything.

Mon Mar 22 19:21:16 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htcommon/DocumentRef.h, htcommon/DocumentRef.cc: Fix #ifdef
	problems with zlib.

Mon Mar 22 19:14:40 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html (template_name): Typo; used by htsearch, not htdig.

Mon Mar 22 19:10:56 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc (got_href): Check if the ref is for the
	current document before adding it to the db. (From H-P Nilsson, Mar 8)

Mon Mar 22 19:03:23 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html: Rephrase and clarify entry for url_part_aliases.
	(From Hans-Peter Nilsson, Mar 2)

Mon Mar 22 18:48:10 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htfuzzy/Synonym.cc: Fix minor memory leak.

	* htlib/Dictionary.h, htlib/Dictionary.cc(hashCode): Check if key
	can be converted to an integer using strtol. If so, use the
	integer as the hash code.  (Geoff's patch)

Mon Mar 22 18:23:11 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/List.cc(Nth): Check for out-of-bounds requests before
	doing anything.

Mon Mar 22 17:50:47 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(display): Free DocumentRef memory after
	displaying them.
	(displayMatch): Fix memory leak when documents did not have anchors,
	fix problems when documents did not have descriptions.
